# telefraud_analysis_homework

./: .gitignore  README.md  TRAINING_LOG.md  pyproject.toml  requirements.txt
configs/: binary_fusion.example.yaml  sft_lora.example.yaml
data/: README.md  dataset_manifest.json  gitattributes
docs/: LEARNING_GUIDE.md  TELEANTIFRAUD_MULTIMODAL_TRAINING.md
docs/superpowers/plans/: 2026-05-29-teleantifraud-frontend-demo.md
docs/superpowers/specs/: 2026-05-29-teleantifraud-frontend-demo-design.md
paper/: teleantifraud_paper.tex
scripts/: cache_multimodal_features.py  eval_sft_adapter.py  generate_project_guide_pdf.py  generate_report_charts.py  predict_binary.py  screen_hard_cases.py  serve_demo.py  train_e2e_fusion.py  train_fusion_classifier.py  train_sft_lora.py  visualize_dataset.py
src/teledeceit/: __init__.py  data.py  demo_backend.py  features.py  inference.py  metrics.py  model.py  prompt_templates.py  sft_data.py  training.py
tests/: test_data_pipeline.py  test_demo_backend.py  test_demo_frontend.py  test_feature_dataset.py  test_model_and_metrics.py  test_prompt_templates.py  test_sft_data.py  test_training_loop.py
web/demo/: app.js  index.html  styles.css
